hphp/test/slow/case-types/prop-2.php.expectf
Catchable fatal error: B::a must have a type of C1 as defined in A in %s/prop-2.php on line 18
